# Hotspot-Management

./: .env.template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 00c6ca338f84_add_organization_id_to_users.py  1f9b2a61b7c4_initial_tables.py  26caacca49fb_create_initial_tables.py  3b9d2ddb49f1_rename_hashed_password_to_password_hash.py  60849fbcf0e8_add_role_to_user.py  caa08bfa8325_add_phone_and_clean_up_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  users.py
app/api/v1/routes/: __init__.py  auth.py
app/core/: config.py  exceptions.py  jwt.py  mail_config.py  security.py
app/db/: base.py  base_model.py  init_db.py  org_base.py  seed.py  session.py
app/models/: __init__.py  auth.py  blacklist.py  branch.py  organization.py  roles.py  user.py  user_role.py
app/schemas/: auth.py  token.py  user.py
app/services/: auth_service.py  email_service.py  token_service.py
app/templates/email/: verification.html
app/utils/: auth_utils.py  deps.py  logger.py  responses.py
tests/: conftest.py  test_auth.py
tests/test_user_routes/: test_email_verification.py  test_login.py  test_user_registration.py
